--- a/LOGIN.html
+++ b/LOGIN.html
@@ -7,10 +7,12 @@
   
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-      
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+	
 	<link rel="stylesheet" href="loginCSS.css">
 	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="flipCard.css">   
+	<link rel="stylesheet" href="flipCard.css">  
+	<link rel="stylesheet" href="quotes.css">  	
 
   
 </head>
@@ -80,20 +82,41 @@
     </ul>
   </div>
 </nav>
+<div class="quotes">
+Do something today that your future self will thank you for
+</div>
 
 <div class="row">
 <div class="col-sm-4">
       <div class="flip">
         <div class="card"> 
           <div class="face front"> 
-            <div class="inner">
-			 <h3>Diet</h3>
+            <div class="inner">   
+			<h3>Calorie Calc</h3>
               <img src="#">
             </div>
           </div> 
           <div class="face back"> 
             <div class="inner text-center"> 
-              <h4>O dieta sanatoasa este cea mai buna cale de a prevenit si controla problemele de sanatate cum ar fi probleme de inima , tensiune arteriala crescuta  , type 2 diabet si unele forme de cancer.</h4>
+              <h4>Calculeaza cate calorii trebuie sa consumi!</h4>
+              <button type="button" class="btn btn-default">Know More</button>
+            </div>
+          </div>
+        </div>	 
+    </div>
+      </div>
+  <div class="col-sm-4">
+      <div class="flip">
+        <div class="card"> 
+          <div class="face front"> 
+            <div class="inner">   
+			<h3>Diet</h3>
+              <img src="#">
+            </div>
+          </div> 
+          <div class="face back"> 
+            <div class="inner text-center"> 
+                 <h4>O dieta sanatoasa este cea mai buna cale de a prevenit si controla problemele de sanatate cum ar fi probleme de inima , tensiune arteriala crescuta  , type 2 diabet si unele forme de cancer.</h4>
               <button type="button" class="btn btn-default">Know More</button>
             </div>
           </div>
@@ -111,25 +134,7 @@
           </div> 
           <div class="face back"> 
             <div class="inner text-center"> 
-              <h5>Principalul beneficiu al oricarui tip de antrenament este imbunatatirea sistemului cardiovascular. Dar ceea ce nu se stie este ca antrenamentul regulat are serioase beneficii pentru functionalitatile creerului.</h5>
-              <button type="button" class="btn btn-default">Know More</button>
-            </div>
-          </div>
-        </div>	 
-      </div>
-    </div>
-  <div class="col-sm-4">
-      <div class="flip">
-        <div class="card"> 
-          <div class="face front"> 
-            <div class="inner">   
-			<h3>Calc</h3>
-              <img src="#">
-            </div>
-          </div> 
-          <div class="face back"> 
-            <div class="inner text-center"> 
-              <h5>Improved efficiency through automation</h5>
+                <h4>Principalul beneficiu al oricarui tip de antrenament este imbunatatirea sistemului cardiovascular. Dar ceea ce nu se stie este ca antrenamentul regulat are serioase beneficii pentru functionalitatile creerului.</h4>
               <button type="button" class="btn btn-default">Know More</button>
             </div>
           </div>
