--- a/LOGIN.html
+++ b/LOGIN.html
@@ -22,7 +22,7 @@
   <div id="wrap">
   <div id="regbar">
     <div id="navthing">
-      <h2><a href="#" id="loginform">Login</a> | <a href="#" id="registerform">Register</a></h2>
+      <h2><a href="#" id="loginform">Login</a> | <a href="#">Register</a></h2>
     <div class="login">
       <div class="arrow-up"></div>
       <div class="formholder">
@@ -33,20 +33,6 @@
              <label name="password">Password</label>
              <input type="password" placeholder="Password" />
              <input type="submit" value="Login" /> 
-           </fieldset>
-        </div>
-      </div>
-    </div>
-	 <div class="register">
-      <div class="arrow-up"></div>
-      <div class="formholder">
-        <div class="randompad">
-           <fieldset>
-             <label name="fName">First Name</label>
-             <input type="fName" />
-             <label name="lName">Last Name</label>
-             <input type="lName"  />
-             <input type="submit" value="Register" />
            </fieldset>
         </div>
       </div>
@@ -68,17 +54,20 @@
         <li>Home</li>
       </b>
       <b href="#">
-        <li>About</li>
+        <li>Articles</li>
       </b>
       <b href="#">
-        <li>Info</li>
+        <li>Videos</li>
       </b>
       <b href="#">
         <li>Contact</li>
       </b>
       <b href="#">
-        <li>Show me more</li>
+        <li>Challenges</li>
       </b>
+		 <b href="#">
+        <li>Community</li>
+		</b>
     </ul>
   </div>
 </nav>
@@ -90,42 +79,47 @@ Do something today that your future self will thank you for
 <div class="col-sm-4">
       <div class="flip">
         <div class="card"> 
+		<div class="imgCCalc">	
           <div class="face front"> 
             <div class="inner">   
 			<h3>Calorie Calc</h3>
-              <img src="#">
             </div>
           </div> 
           <div class="face back"> 
             <div class="inner text-center"> 
               <h4>Calculeaza cate calorii trebuie sa consumi!</h4>
-              <button type="button" class="btn btn-default">Know More</button>
+
+			  <button type="button" class="btn btn-default">Know More</button>
+			  
             </div>
           </div>
         </div>	 
     </div>
+	</div>
       </div>
   <div class="col-sm-4">
       <div class="flip">
-        <div class="card"> 
-          <div class="face front"> 
-            <div class="inner">   
-			<h3>Diet</h3>
-              <img src="#">
+        <div class="card"> 	
+		<div class="imgDiet">		
+          <div class="face front"> 	  
+            <div class="inner">   	 			
+			<h3>Diet</h3> 
             </div>
-          </div> 
+          </div> 	  
           <div class="face back"> 
             <div class="inner text-center"> 
                  <h4>O dieta sanatoasa este cea mai buna cale de a prevenit si controla problemele de sanatate cum ar fi probleme de inima , tensiune arteriala crescuta  , type 2 diabet si unele forme de cancer.</h4>
               <button type="button" class="btn btn-default">Know More</button>
             </div>
           </div>
+		  </div>
         </div>	 
       </div>
     </div>
   <div class="col-sm-4">
       <div class="flip">
         <div class="card"> 
+		<div class="imgTraining">	
           <div class="face front"> 
             <div class="inner">   
 			<h3>Antrenament</h3>
@@ -137,6 +131,7 @@ Do something today that your future self will thank you for
                 <h4>Principalul beneficiu al oricarui tip de antrenament este imbunatatirea sistemului cardiovascular. Dar ceea ce nu se stie este ca antrenamentul regulat are serioase beneficii pentru functionalitatile creerului.</h4>
               <button type="button" class="btn btn-default">Know More</button>
             </div>
+			</div>
           </div>
         </div>	 
       </div>
