--- a/LOGIN.html
+++ b/LOGIN.html
@@ -89,7 +89,7 @@ Do something today that your future self will thank you for
             <div class="inner text-center"> 
               <h4>Calculeaza cate calorii trebuie sa consumi!</h4>
 
-			  <button type="button" class="btn btn-default">Know More</button>
+			<a href="Calc.html"> <button type="button" class="btn btn-default">Know More</button></a>
 			  
             </div>
           </div>
