--- a/REGISTER.html
+++ b/REGISTER.html
@@ -95,7 +95,7 @@
 </div>
 
 <div class="tab">How you better describe yourself:
-  <br><br><p  id='frame'><input id='one' type="radio" name="options" autocomplete="off">
+			<p  id='frame'><input id='one' type="radio" name="options" autocomplete="off">
             <label class='block' for='one'></label>
 			<input id='two' type="radio" name="options" autocomplete="off">
             <label class='block' for='two'></label>
