--- a/Calc.html
+++ b/Calc.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="/apple-touch-icon.png">
-<link rel="stylesheet" href="calc.css" type="calc.css">
 <link rel="preload" href="/images/freedieting-logo.png" as="image">
 <link rel="preload" as="font" href="/fonts/source-sans-pro-v11-latin-regular.woff2" type="font/woff2" crossorigin/>
 <link rel="preload" as="font" href="/fonts/source-sans-pro-v11-latin-700.woff2" type="font/woff2" crossorigin/>
-<link rel="stylesheet" href="loginCSS.css">
+	<link rel="stylesheet" href="calc.css">
+	<link rel="stylesheet" href="loginCSS.css">
 	<link rel="stylesheet" href="menu.css">
 	<link rel="stylesheet" href="flipCard.css">  
 	<link rel="stylesheet" href="quotes.css">  	
-  
+
 <!-- This site is optimized with the Yoast SEO plugin v7.1 - https://yoast.com/wordpress/plugins/seo/ -->
 <link rel="canonical" href="https://www.freedieting.com/calorie-calculator" />
 <!-- / Yoast SEO plugin. -->
