--- a/community.html
+++ b/community.html
@@ -70,19 +70,70 @@
     </ul>
   </div>
 </nav>
-<div id="justify">
+<!--<div id="justify">
 <picture style="float:left">
   <source srcset="https://www.bodybuilding.com/images/2018/march/podcast-episode-38-header-v2-400x225.jpg" media="(min-width: 401px)">                                                            
   <img srcset="https://www.bodybuilding.com/images/2018/march/podcast-episode-38-header-v2-200x113.jpg" alt="Podcast Episode 38: Straight talk on Protein and more with Dr. Jose Antonio"></picture>
 <h3><a href="https://www.bodybuilding.com/fun/podcast-episode-38-straight-talk-on-protein-and-more-with-dr-jose-antonio.html">Podcast Episode 38: Straight talk on Protein and more with Dr. Jose Antonio</a></h3>
 		<p style="float:left">The CEO and co-founder of the International Society of Sports Nutrition stopped by Bodybuilding.com to talk about his research into high-protein diets, and share the current state of the research on protein dosage, creatine, glutamine, and plenty more.</p>
+</div>-->
+<h1 style="color:grey;font-family: 'Gloria Hallelujah', cursive;font-size:50px;text-align:center;"> Comunity News </h1>
+<div class="cards">
+<div class="card">
+<figure class="snip1529"><img src="https://www.bodybuilding.com/images/2018/march/podcast-episode-38-header-v2-400x225.jpg" alt="1" />
+  <div class="date"><span class="day">08</span><span class="month">June</span></div>
+  <figcaption>
+    <h3>Podcast Episode 38: Straight talk on Protein and more with Dr. Jose Antonio</h3>
+  </figcaption>
+  <div class="hover"><i class="ion-android-open"></i></div>
+  <a href="https://www.bodybuilding.com/fun/podcast-episode-38-straight-talk-on-protein-and-more-with-dr-jose-antonio.html"></a>
+</figure>
 </div>
-
+<div class="card">
+<figure class="snip1529"><img src="https://www.bodybuilding.com/images/2018/january/your-expert-guide-to-green-tea-header-400x225.jpg" alt="2" />
+  <div class="date"><span class="day">09</span><span class="month">June</span></div>
+  <figcaption>
+    <h3>Your Expert Guide To Green Tea</h3>
+    <p>Green tea is said to support everything from weight loss to healthy skin and normal aging, but does the science really support the hype?</p>
+  </figcaption>
+  <div class="hover"><i class="ion-android-open"></i></div>
+  <a href="https://www.bodybuilding.com/content/your-expert-guide-to-green-tea.html"></a>
+</figure>
+</div>
+<div class="card">
+<figure class="snip1529"><img src="https://www.bodybuilding.com/images/2017/november/5-foods-to-boost-your-energy-header-400x225.jpg" alt="3" />
+  <div class="date">Read More<span class="day">10</span><span class="month">June</span></div>
+  <figcaption>
+    <h3>5 Foods To Boost Your Energy</h3>
+    <p>Before you reach for another cup of stimulants, take a harder look at your daily nutrition. Are you missing some easy sources of energy? Here are five to consider.</p>
+  </figcaption>
+  <div class="hover"><i class="ion-android-open"></i></div>
+  <a href="https://www.bodybuilding.com/content/5-foods-to-boost-your-energy.html"></a>
+</figure>
+</div>
+<div class="card">
+<figure class="snip1529"><img src="https://www.bodybuilding.com/images/2018/january/design-your-diet-to-fight-chronic-inflammation-header-400x225.jpg" alt="4" />
+  <div class="date"><span class="day">11</span><span class="month">June</span></div>
+  <figcaption>
+    <h3>Design Your Diet To Fight Chronic Inflammation</h3>
+    <p>Eat quality protein. Eat lots of vegetables. Use spices rather than sugary sauces. Try this approach and see how it works for you!</p>
+  </figcaption>
+  <div class="hover"><i class="ion-android-open"></i></div>
+  <a href="https://www.bodybuilding.com/content/design-your-diet-to-fight-chronic-inflammation.html"></a>
+</figure>
+</div>
+</div>
 
  
     
 
-
+<script>
+/* Demo purposes only */
+$(".hover").mouseleave(
+  function() {
+    $(this).removeClass("hover");
+  }
+);</script>
 	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
